# Cornell_JHU-SCARCHhierarchSIR

./: .gitignore  LICENSE-CC-BY-NC-SA.txt  README.md  SCARCHhierarchSIR_env.yml  model_equations.tex  pyproject.toml
data/: README.md
data/conversion/cases/: backfill_preliminary-NHSN-HRD-data.py  fetch-format_NHSN-HRD-data.py
data/conversion/demography/: build-demography.py
data/conversion/geography/: make-adjacency_matrix.py
data/interim/demography/: demography.csv
data/interim/geography/: adjacency_matrix.csv
scripts/operational/: forecast-USA.py  forecast.py  train.py  training-USA.py
src/SCARCHhierarchSIR/: SIR_model.py  data.py  models.py  preoptimization.py  pymc_model.py
